# greentic-dev

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  rust-toolchain.toml
.codex/: repo_overview.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml
ci/: local_check.sh
crates/dev-runner/: Cargo.toml
crates/dev-runner/examples/flows/: min.yaml
crates/dev-runner/src/: lib.rs  registry.rs  runner.rs  schema.rs  transcript.rs
crates/dev-runner/tests/: schema_validate_basic.rs
crates/dev-viewer/: Cargo.toml
crates/dev-viewer/src/: main.rs
docs/: cli.md  config_flows.md  developer-guide.md  mocks.md  runner.md  scaffolder.md  viewer.md
docs/audits/: flow_semantics_in_dev.md
examples/flows/: min.ygtc
fixtures/components/dev.greentic.echo/: component.manifest.json  component.wasm
fixtures/providers/dev/: toolmap.yaml
scripts/: check_types_compat.py
src/: cbor_cmd.rs  cli.rs  component_add.rs  component_cli.rs  component_resolver.rs  config.rs  distributor.rs  flow_cmd.rs  lib.rs  main.rs  mcp_cmd.rs  pack_build.rs  pack_cli.rs  pack_init.rs  pack_run.rs  pack_temp.rs  pack_verify.rs  passthrough.rs  tests_exec.rs
src/cmd/: config.rs  pack.rs
src/cmd/component/: doctor.rs  mod.rs  new.rs  templates.rs  types.rs  validate.rs
src/delegate/: component.rs  packc.rs
src/util/: json.rs  process.rs
templates/component/: Cargo.toml.in  README.md  provider.toml
templates/component/src/: lib.rs
tests/: cli_examples.rs  cli_passthrough_help.rs  component_add_offline.rs  component_cli.rs  conformance_feature.rs  developer_guide_e2e.rs  distributor_dev.rs  flow_add_step.rs  pack_build_gtpack.rs  pack_cli_help.rs  pack_inspect.rs  pack_smoke.rs  realism_l2.rs  realism_l21.rs  realism_l3.rs  realism_l3_1_cli.rs  realism_l3_2_cli.rs  realism_l3_3_cli.rs  realism_l4.rs  realism_l4_1_cli.rs  realism_l4_1_weather.rs  realism_ladder.rs  registry_test.rs
tests/fixtures/hello-pack/: hello-flow.ygtc.resolve.json
tests/fixtures/l2/: default_dev_flow.json
tests/support/: custom_add_step.rs  exec.rs  flow.rs  l3.rs  l4.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/templates/: .github_workflows_ci.yml  component_Cargo.toml  docs_ci.md  examples_flows_min.yaml  schemas_v1_node.schema.json  src_describe.rs  src_lib.rs  tests_schema_validates_examples.rs
xtask/templates/component/: Cargo.toml  README.md  provider.toml
xtask/templates/component/schemas/v1/: config.schema.json
xtask/templates/component/src/: lib.rs
xtask/templates/component/wit/: world.wit
