[package]
name = "greentic-dev"
version = "0.3.5"
edition = "2024"
description = "Developer CLI and local tooling for Greentic flows, packs, and components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greentic-ai/greentic-dev"
homepage = "https://greentic.ai/"
documentation = "https://docs.rs/greentic-dev"
# Ensure runtime assets ship with the crate.
include = [
    "src/**",
    "templates/**",
    "README.md",
    "LICENSE*",
    "Cargo.toml",
]

[workspace]
members = ["crates/dev-viewer", "xtask"]
resolver = "2"

[features]
default = []
conformance = ["greentic-conformance"]
mcp = ["greentic-mcp", "greentic-interfaces/runner-host-v1"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_yaml_bw = "2"
greentic-conformance = { version = "0.1", optional = true }
once_cell = "1.19"
convert_case = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
toml_edit = "0.23"
semver = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["macros", "formatting"] }
component-store = { git = "https://github.com/greentic-ai/greentic-component", branch = "master" }
wit-component = "0.240"
wit-parser = "0.240"
greentic-interfaces = { version = "0.4", default-features = false, features = ["describe-v1"] }
greentic-types = { version = "0.3", features = ["serde"] }
component-runtime = { git = "https://github.com/greentic-ai/greentic-component", branch = "master" }
greentic-flow = "0.3"
greentic-pack = "0.3"
greentic-runner = "0.3"
greentic-component = { version = "0.3", features = ["prepare", "describe"] }
greentic-mcp = { version = "0.3", optional = true }
jsonschema = "0.33"
tempfile = "3"
dirs = "6"
which = "8"

[workspace.metadata.dist]
cargo-dist-version = "0.24.1"
ci = ["github"]
installers = ["shell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[workspace.metadata.dist.package.greentic-dev]
all-features = true
