[package]
name = "greentic-dev"
version = "0.4.16"
edition = "2024"
description = "Developer CLI and local tooling for Greentic flows, packs, and components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greentic-ai/greentic-dev"
homepage = "https://greentic.ai/"
documentation = "https://docs.rs/greentic-dev"
# Ensure runtime assets ship with the crate.
include = [
    "src/**",
    "templates/**",
    "README.md",
    "LICENSE*",
    "Cargo.toml",
]

#[package.metadata.binstall]
#pkg-url = "https://github.com/greentic-ai/greentic-dev/releases/download/greentic-dev-v{ version }/greentic-dev-v{ version }-{ target }.tgz"
#bin-dir = "{ bin }{ binary-ext }"
#pkg-fmt = "tgz"

[workspace]
members = ["crates/dev-viewer", "xtask"]
resolver = "2"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_yaml_bw = "2"
once_cell = "1.19"
convert_case = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
toml_edit = "0.23"
semver = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["macros", "formatting"] }
wit-component = "0.243"
wit-parser = "0.243"
greentic-interfaces = { version = "0.4", default-features = false, features = ["describe-v1"] }
greentic-types = { version = "0.4", features = ["serde"] }
greentic-flow = "0.4"
greentic-pack = "0.4"
greentic-runner = "0.4"
packc = "0.4"
greentic-component = { version = "0.4", features = ["prepare", "describe", "cli"] }
greentic-mcp = { version = "0.4" }
jsonschema = "0.37"
tempfile = "3"
dirs = "6"
which = "8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
bytes = "1.7"
async-compression = "0.4"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
greentic-distributor-client = { version = "0.4", features = ["http-runtime"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
[workspace.metadata.dist]
cargo-dist-version = "0.24.1"
ci = ["github"]
installers = ["shell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[workspace.metadata.dist.package.greentic-dev]
all-features = true

[dev-dependencies]
httpmock = "0.8"
