[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
convert_case = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
semver = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["macros", "formatting"] }
component-store = "0.2.0"
wit-component = "0.240.0"
wit-parser = "0.240.0"
greentic-interfaces = { version = "0.4.19" }
greentic-types = { version = "0.1.6", features = ["serde"] }
component-runtime = { version = "0.2.0" }
