[package]
name = "dev-runner"
version = "0.1.0"
edition = "2024"

[features]
default = []
conformance = ["greentic-conformance"]

[dependencies]
jsonschema = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_bw = "2"
greentic-conformance = { path = "../../../greentic-conformance", optional = true }
